https://jira.aplana.com/browse/SBRFACCTAX-15026 rowspan. 1 часть