@@ -4,13 +4,25 @@ import com.aplana.sbrf.taxaccounting.dao.FormDataDao;
 import com.aplana.sbrf.taxaccounting.dao.api.DataRowDao;
 import com.aplana.sbrf.taxaccounting.dao.impl.AbstractDao;
 import com.aplana.sbrf.taxaccounting.dao.impl.util.SqlUtils;
-import com.aplana.sbrf.taxaccounting.model.*;
+import com.aplana.sbrf.taxaccounting.model.Cell;
+import com.aplana.sbrf.taxaccounting.model.Column;
+import com.aplana.sbrf.taxaccounting.model.ColumnType;
+import com.aplana.sbrf.taxaccounting.model.DataRow;
+import com.aplana.sbrf.taxaccounting.model.DataRowType;
+import com.aplana.sbrf.taxaccounting.model.FormData;
+import com.aplana.sbrf.taxaccounting.model.FormDataSearchResult;
+import com.aplana.sbrf.taxaccounting.model.FormStyle;
+import com.aplana.sbrf.taxaccounting.model.NumericColumn;
+import com.aplana.sbrf.taxaccounting.model.PagingResult;
 import com.aplana.sbrf.taxaccounting.model.datarow.DataRowRange;
 import com.aplana.sbrf.taxaccounting.model.util.Pair;
 import com.aplana.sbrf.taxaccounting.util.BDUtils;
+import org.apache.commons.collections4.IterableUtils;
+import org.apache.commons.collections4.Predicate;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.jdbc.core.RowCallbackHandler;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.stereotype.Repository;
 
@@ -146,25 +158,33 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 	@Override
 	public void copyRows(long formDataSourceId, long formDataDestinationId) {
 		FormData formDataSource = formDataDao.get(formDataSourceId, false);
-		FormData formData = formDataDao.get(formDataDestinationId, false);
+		FormData formDataTarget = formDataDao.get(formDataDestinationId, false);
 		// Проверяем, что макеты одинаковые
-		if (formData.getFormTemplateId() != formDataSource.getFormTemplateId()) {
+		if (formDataTarget.getFormTemplateId() != formDataSource.getFormTemplateId()) {
 			throw new IllegalArgumentException("Макеты НФ должны совпадать");
 		}
 		// Очистка постоянного среза НФ-приемника
-		removeRows(formData);
+		removeRows(formDataTarget);
+
+		Map<String, Object> params = new HashMap<String, Object>();
+		params.put("form_data_id", formDataTarget.getId());
+		params.put("temporary", DataRowType.SAVED.getCode());
+		params.put("form_data_source_id", formDataSource.getId());
+		params.put("temporary_source", DataRowType.SAVED.getCode());
+		params.put("manual", DataRowType.AUTO.getCode());
+
 		// Копирование данных из постоянного среза источника в постоянный срез приемника
-		Map<Integer, String[]> columnNames = DataRowMapper.getColumnNames(formData);
+		Map<Integer, String[]> columnNames = DataRowMapper.getColumnNames(formDataTarget);
 		StringBuilder sql = new StringBuilder("INSERT INTO form_data_row");
 		sql.append(" (id, form_data_id, temporary, manual, ord, alias");
-		for (Column column : formData.getFormColumns()) {
+		for (Column column : formDataTarget.getFormColumns()) {
 			sql.append('\n');
 			for (String name : columnNames.get(column.getId())) {
 				sql.append(", ").append(name);
 			}
 		}
 		sql.append(")\nSELECT seq_form_data_row.nextval, :form_data_id, :temporary, manual, ord, alias");
-		for (Column column : formData.getFormColumns()) {
+		for (Column column : formDataTarget.getFormColumns()) {
 			sql.append('\n');
 			for (String name : columnNames.get(column.getId())) {
 				sql.append(", ").append(name);
@@ -173,18 +193,14 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 		sql.append("\nFROM form_data_row");
 		sql.append("\nWHERE form_data_id = :form_data_source_id AND temporary = :temporary_source AND manual = :manual");
 
-		Map<String, Object> params = new HashMap<String, Object>();
-		params.put("form_data_id", formData.getId());
-		params.put("temporary", DataRowType.SAVED.getCode());
-		params.put("form_data_source_id", formDataSource.getId());
-		params.put("temporary_source", DataRowType.SAVED.getCode());
-		params.put("manual", DataRowType.AUTO.getCode());
-
 		if (LOG.isTraceEnabled()) {
 			LOG.trace(params);
 			LOG.trace(sql.toString());
         }
 		getNamedParameterJdbcTemplate().update(sql.toString().intern(), params);
+		// копирование спанов
+		removeSpanAll(formDataTarget, DataRowType.SAVED);
+		copySpan(formDataSource, formDataTarget, DataRowType.SAVED);
 	}
 
 	@Override
@@ -195,8 +211,7 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 		// сдвигаем все строки, чтобы обойти ограничение уникального индекса при сортировке
 		shiftRows(formData, new DataRowRange(1, rows.size()), DataRowType.SAVED);
 		// обновляем данные в бд
-		StringBuilder sql = new StringBuilder("UPDATE form_data_row");
-		sql.append(" SET ord = :ord WHERE id = :id");
+		String sql = "UPDATE form_data_row SET ord = :ord WHERE id = :id";
 
 		List<Map<String, Object>> params = new ArrayList<Map<String, Object>>(rows.size());
 		int i = 1;
@@ -209,9 +224,139 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 			params.add(values);
 		}
 		if (LOG.isTraceEnabled()) {
-			LOG.trace(sql.toString());
+			LOG.trace(sql);
 		}
-		getNamedParameterJdbcTemplate().batchUpdate(sql.toString().intern(), params.toArray(new Map[0]));
+		getNamedParameterJdbcTemplate().batchUpdate(sql.intern(), params.toArray(new Map[0]));
+		// удалить все rowspan > 1, затем удалить все rowspan = 1 и colspan = 1
+		removeSpanAll(formData, DataRowType.SAVED);
+		insertSpan(formData, DataRowType.SAVED, rows);
+	}
+
+	private static final String SQL_INSERT_SPAN = "INSERT INTO form_data_row_span (form_data_id, temporary, manual, data_ord, ord, colspan, rowspan) " +
+			"VALUES (:form_data_id, :temporary, :manual, :data_ord, :ord, :colspan, :rowspan)";
+	/**
+	 * Вставляем информацию об объединениях ячеек для указанных строк
+	 * @param rows строки, должны быть уже в БД
+	 */
+	private void insertSpan(FormData formData, DataRowType temporary, List<DataRow<Cell>> rows) {
+		//TODO не забыть поменять rowspan у тех строк, которые были до вставки новых
+		if (rows.isEmpty()) {
+			return;
+		}
+		if (temporary != DataRowType.SAVED && temporary != DataRowType.TEMP) {
+			throw new IllegalArgumentException("Wrong value of 'temporary' argument");
+		}
+
+		// запрашиваем информацию о типе среза
+		final Map<String, Object> rowParams = new HashMap<String, Object>();
+		rowParams.put("form_data_id", formData.getId());
+		rowParams.put("temporary", temporary.getCode());
+		rowParams.put("manual", formData.isManual() ? 1 : 0);
+
+		// устанавливаем значения для спанов
+		List<Map<String, Object>> spanParams = new ArrayList<Map<String, Object>>(rows.size());
+		for (DataRow<Cell> row : rows) {
+			for(Cell cell : row.getCells()) {
+				int colspan = cell.getColSpan();
+				int rowspan = cell.getRowSpan();
+				if (colspan + rowspan > 2) { // если значения отличаются от значений по умолчанию
+					Map<String, Object> values = new HashMap<String, Object>();
+					values.putAll(rowParams);
+					values.put("id", row.getId());
+					values.put("data_ord", cell.getColumn().getDataOrder());
+					values.put("ord", row.getIndex());
+					if (colspan > 1) {
+						values.put("colspan", colspan);
+					}
+					if (rowspan > 1) {
+						values.put("rowspan", rowspan);
+					}
+					spanParams.add(values);
+				}
+			}
+		}
+		getNamedParameterJdbcTemplate().batchUpdate(SQL_INSERT_SPAN, spanParams.toArray(new Map[0]));
+	}
+
+	private static final String SQL_GET_ROW_PARAMS = "SELECT form_data_id, temporary, manual FROM form_data_row WHERE id = :id";
+	/**
+	 * Запрашиваем информацию о типе среза, в котором находится строка НФ
+	 * @param row
+	 * @return
+	 */
+	private Map<String, Object> getRowParams(DataRow<Cell> row) {
+		final Map<String, Object> rowParams = new HashMap<String, Object>();
+		rowParams.put("id", row.getId());
+		getNamedParameterJdbcTemplate().query(SQL_GET_ROW_PARAMS, rowParams, new RowCallbackHandler() {
+			@Override
+			public void processRow(ResultSet rs) throws SQLException {
+				rowParams.put("form_data_id", rs.getLong("form_data_id"));
+				rowParams.put("temporary", rs.getInt("temporary"));
+				rowParams.put("manual", rs.getInt("manual"));
+			}
+		});
+		return rowParams;
+	}
+
+	private static final String SQL_MOVE_SPAN = "UPDATE form_data_row_span SET temporary = :new_temporary " +
+			"WHERE form_data_id = :form_data_id AND temporary = :temporary AND manual = :manual";
+	/**
+	 * Копирует спаны из постоянного среза в резервный и наоборот
+	 * @param formData
+	 * @param from
+	 * @param to
+	 */
+	private void moveSpan(FormData formData, DataRowType from, DataRowType to) {
+		if (from != DataRowType.SAVED && from != DataRowType.TEMP) {
+			throw new IllegalArgumentException("Wrong value of 'from' argument");
+		}
+		if (to != DataRowType.SAVED && to != DataRowType.TEMP) {
+			throw new IllegalArgumentException("Wrong value of 'to' argument");
+		}
+		if (to == from) {
+			throw new IllegalArgumentException("Wrong value of 'from' and 'to' arguments");
+		}
+		// вставляем новые
+		final Map<String, Object> rowParams = new HashMap<String, Object>();
+		rowParams.put("form_data_id", formData.getId());
+		rowParams.put("temporary", from.getCode());
+		rowParams.put("new_temporary", to.getCode());
+		rowParams.put("manual", formData.isManual() ? 1 : 0);
+		getNamedParameterJdbcTemplate().update(SQL_MOVE_SPAN, rowParams);
+	}
+
+	private static final String SQL_COPY_SPAN = "INSERT INTO form_data_row_span (form_data_id, temporary, manual, data_ord, ord, colspan, rowspan) " +
+			"SELECT :form_data_id_target, temporary, manual, data_ord, ord, colspan, rowspan FROM form_data_row_span WHERE " +
+			"form_data_id = :form_data_id_source AND temporary = :temporary AND manual = :manual";
+	/**
+	 * Копирует спаны из
+	 * @param formDataSource
+	 * @param formDataTarget
+	 * @param temporary
+	 */
+	private void copySpan(FormData formDataSource, FormData formDataTarget, DataRowType temporary) {
+		if (temporary != DataRowType.SAVED && temporary != DataRowType.TEMP) {
+			throw new IllegalArgumentException("Wrong value of 'temporary' argument");
+		}
+		if (formDataSource.getId() == formDataTarget.getId()) {
+			throw new IllegalArgumentException("Wrong value of 'formDataSource' and 'formDataTarget' arguments");
+		}
+		// вставляем новые
+		final Map<String, Object> rowParams = new HashMap<String, Object>();
+		rowParams.put("form_data_id_source", formDataSource.getId());
+		rowParams.put("form_data_id_target", formDataTarget.getId());
+		rowParams.put("temporary", temporary.getCode());
+		rowParams.put("manual", formDataSource.isManual() ? 1 : 0);
+		getNamedParameterJdbcTemplate().update(SQL_COPY_SPAN, rowParams);
+	}
+
+	/**
+	 * После удаления строк надо поправить rowspan у оставшихся строк. Выполняется до основного
+	 * удаления строк
+	 * @param rows
+	 */
+	private void removeSpan(List<DataRow<Cell>> rows) {
+		//todo
 	}
 
 	@Override
@@ -241,7 +386,7 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
         insertRows(formData, index, rows, DataRowType.SAVED);
     }
 
-	private void insertRows(FormData formData, int index, List<DataRow<Cell>> rows, DataRowType dataRowType) {
+	private void insertRows(FormData formData, int index, List<DataRow<Cell>> rows, DataRowType temporary) {
         DataRowMapper dataRowMapper = new DataRowMapper(formData);
 		int size = getRowCount(formData);
 		if (index < 1 || index > size + 1) {
@@ -251,7 +396,7 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 			throw new IllegalArgumentException("Аргумент \"rows\" должен быть задан");
 		}
 		// сдвигаем строки
-		shiftRows(formData, new DataRowRange(index, rows.size()), dataRowType);
+		shiftRows(formData, new DataRowRange(index, rows.size()), temporary);
 		// вставляем новые в образовавшийся промежуток
 		Map<Integer, String[]> columnNames = DataRowMapper.getColumnNames(formData);
 
@@ -283,7 +428,7 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 			Map<String, Object> values = new HashMap<String, Object>();
 			values.put("id", row.getId());
 			values.put("form_data_id", formData.getId());
-			values.put("temporary", dataRowType.getCode());
+			values.put("temporary", temporary.getCode());
 			values.put("manual", manual);
 			values.put("ord", row.getIndex());
 			values.put("alias", row.getAlias());
@@ -299,6 +444,8 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 			LOG.trace(sql.toString());
 		}
 		getNamedParameterJdbcTemplate().batchUpdate(sql.toString().intern(), params.toArray(new Map[0]));
+		// вставляем спаны
+		insertSpan(formData, temporary, rows);
 	}
 
 	@Override
@@ -308,7 +455,6 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 		// вставляем новый набор данных
 		insertRows(formData, 1, dataRows);
 	}
-
 
     @Override
     public void saveTempRows(final FormData formData, final List<DataRow<Cell>> dataRows) {
@@ -359,6 +505,9 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 	@Override
 	public void removeRows(FormData formData, final List<DataRow<Cell>> rows) {
 		// примечание: строки надо удалять так, чтобы не нарушалась последовательность ORD = 1, 2, 3, ...
+
+		// обновляем пропуски в спанах
+		removeSpan(rows);
 		// формируем список параметров для батча
 		List<Map<String, Long>> params = new ArrayList<Map<String, Long>>(rows.size());
 		for (DataRow<Cell> row : rows) {
@@ -370,6 +519,7 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 			LOG.trace(DELETE_BY_ROW_ID);
 		}
 		getNamedParameterJdbcTemplate().batchUpdate(DELETE_BY_ROW_ID.intern(), params.toArray(new Map[0]));
+		// упорядочиваем заново строки
 		reorderRows(formData);
 	}
 
@@ -408,14 +558,12 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 		removeRowsInternal(formData, DataRowType.TEMP);
 	}
 
+	private static final String SQL_MOVE_ROWS = "UPDATE form_data_row SET temporary = :temporary WHERE form_data_id = :form_data_id AND manual = :manual";
 	@Override
 	public void restoreCheckPoint(FormData formData) {
 		// удаляем постоянный срез
 		removeRowsInternal(formData, DataRowType.SAVED);
 		// переносим данные из временного среза - восстановление контрольной точки
-		StringBuilder sql = new StringBuilder("UPDATE form_data_row");
-		sql.append(" SET temporary = :temporary WHERE form_data_id = :form_data_id AND manual = :manual");
-
 		Map<String, Object> params = new HashMap<String, Object>();
 		params.put("form_data_id", formData.getId());
 		params.put("temporary", DataRowType.SAVED.getCode());
@@ -423,10 +571,12 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 
 		if (LOG.isTraceEnabled()) {
 			LOG.trace(params);
-			LOG.trace(sql.toString());
+			LOG.trace(SQL_MOVE_ROWS);
 		}
-		getNamedParameterJdbcTemplate().update(sql.toString().intern(), params);
+		getNamedParameterJdbcTemplate().update(SQL_MOVE_ROWS, params);
 		refreshRefBookLinks(formData);
+		// переносим спаны
+		moveSpan(formData, DataRowType.TEMP, DataRowType.SAVED);
 	}
 
 	@Override
@@ -525,12 +675,12 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 	 * @param range       параметры пейджинга, может быть null
 	 * @return список строк, != null
 	 */
-	private List<DataRow<Cell>> getRowsInternal(FormData formData, DataRowRange range, DataRowType dataRowType) {
-        if (dataRowType != DataRowType.SAVED && dataRowType != DataRowType.TEMP) {
-            throw new IllegalArgumentException("Wrong type of 'isTemporary' argument");
-        }
-        DataRowMapper dataRowMapper = new DataRowMapper(formData);
-		Pair<String, Map<String, Object>> sql = dataRowMapper.createSql(range, dataRowType);
+	private List<DataRow<Cell>> getRowsInternal(FormData formData, DataRowRange range, DataRowType temporary) {
+		if (temporary != DataRowType.SAVED && temporary != DataRowType.TEMP) {
+			throw new IllegalArgumentException("Wrong value of 'temporary' argument");
+		}
+		DataRowMapper dataRowMapper = new DataRowMapper(formData);
+		Pair<String, Map<String, Object>> sql = dataRowMapper.createSql(range, temporary);
 		if (!isSupportOver()) {
 			sql.setFirst(sql.getFirst().replaceAll("OVER \\(PARTITION BY.{0,}ORDER BY ord\\)", "OVER ()"));
 		}
@@ -538,7 +688,73 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 			LOG.trace(sql.getSecond());
 			LOG.trace(sql.getFirst());
 		}
-		return getNamedParameterJdbcTemplate().query(sql.getFirst(), sql.getSecond(), dataRowMapper);
+		List<DataRow<Cell>> rows = getNamedParameterJdbcTemplate().query(sql.getFirst(), sql.getSecond(), dataRowMapper);
+		if (rows.size() > 0) {
+			getSpanInfo(dataRowMapper, range, temporary, rows);
+			// для постраничного отображения данных необходимо актуализировать ячейки с разорванным rowspan
+			// https://jira.aplana.com/browse/SBRFACCTAX-15026
+			if (range != null) {
+				updateFirstRow(dataRowMapper, temporary, rows.get(0));
+			}
+		}
+		return rows;
+	}
+
+	/**
+	 * Так как информация об объединении ячеек сейчас хранится в отдельной таблице, то необходимо выполнить
+	 * дополнительный запрос и проставить значения для colspan и rowspan
+	 * @param dataRowMapper
+	 * @param range
+	 * @param temporary
+	 * @param rows
+	 */
+	void getSpanInfo(DataRowMapper dataRowMapper, DataRowRange range, DataRowType temporary, final List<DataRow<Cell>> rows) {
+		if (temporary != DataRowType.TEMP && temporary != DataRowType.SAVED) {
+			throw new IllegalArgumentException("Value of argument 'temporary' is incorrect");
+		}
+		FormData formData = dataRowMapper.getFormData();
+		final List<Column> columns = formData.getFormColumns();
+
+		StringBuilder sb = new StringBuilder();
+		sb.append("SELECT data_ord, ord, colspan, rowspan FROM form_data_row_span ");
+		sb.append("WHERE form_data_id = :form_data_id AND temporary = :temporary AND manual = :manual ");
+
+		Map<String, Object> params = new HashMap<String, Object>();
+		params.put("form_data_id", formData.getId());
+		params.put("temporary", temporary.getCode());
+		params.put("manual", formData.isManual() ? DataRowType.MANUAL.getCode() : DataRowType.AUTO.getCode());
+
+		final int offset = range == null ? 0 : range.getOffset();
+		// если постранично, то добавляем орграничение на выборку
+		if (range != null) {
+			sb.append("AND ord >= :start AND ord < :end");
+
+			params.put("start", offset);
+			params.put("end", offset + range.getCount());
+		}
+
+		// так как надо обработать большое количество ячеек, то заводим кэш
+		final Map<Integer, Column> columnCache = new HashMap<Integer, Column>();
+		getNamedParameterJdbcTemplate().query(sb.toString(), params, new RowCallbackHandler() {
+			@Override
+			public void processRow(ResultSet rs) throws SQLException {
+				int dataOrd = rs.getInt("data_ord");
+				int ord = rs.getInt("ord");
+				Integer colSpan = SqlUtils.getInteger(rs, "colspan");
+				Integer rowSpan = SqlUtils.getInteger(rs, "rowspan");
+				// поиск графы
+				Column column = columnCache.get(dataOrd);
+				if(column == null) {
+					column = getColumnByDataOrd(columns, dataOrd); //todo кэш
+					columnCache.put(dataOrd, column);
+				}
+				// установка значений
+				DataRow<Cell> row = rows.get(ord - offset - 1);
+				Cell cell = row.getCell(column.getAlias());
+				cell.setColSpan(colSpan);
+				cell.setRowSpan(rowSpan);
+			}
+		});
 	}
 
 	/**
@@ -586,36 +802,46 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 	}
 
 	/**
-	 * Удаляет все строки из временного\постоянного срезов. Для временного среза удаляет строки как в версии ручного
+	 * Удаляет все строки из основного\резервного срезов. Для основного среза удаляет строки как в версии ручного
 	 * ввода, так и в автоматической версии. Признак formData.isManual учитывается только при удалении из
-	 * постоянного среза
+	 * основного среза
 	 *
 	 * @param formData          НФ
-	 * @param dataRowType признак из какого среза удалить строки NO NULL
+	 * @param temporary признак из какого среза удалить строки NO NULL
 	 */
-	private void removeRowsInternal(FormData formData, DataRowType dataRowType) {
-		if (dataRowType != DataRowType.TEMP && dataRowType != DataRowType.SAVED) {
-			throw new IllegalArgumentException("Value of argument 'isTemporary' is incorrect");
-		}
-
-		StringBuilder sql = new StringBuilder("DELETE FROM form_data_row");
-		sql.append(" WHERE form_data_id = :form_data_id AND temporary = :temporary");
-		if (dataRowType == DataRowType.SAVED) {
-			sql.append(" AND manual = :manual");
+	private void removeRowsInternal(FormData formData, DataRowType temporary) {
+		if (temporary != DataRowType.TEMP && temporary != DataRowType.SAVED) {
+			throw new IllegalArgumentException("Value of argument 'temporary' is incorrect");
 		}
 
 		Map<String, Object> params = new HashMap<String, Object>();
 		params.put("form_data_id", formData.getId());
-		params.put("temporary", dataRowType.getCode());
-		if (dataRowType == DataRowType.SAVED) {
+		params.put("temporary", temporary.getCode());
+		if (temporary == DataRowType.SAVED) {
 			params.put("manual", formData.isManual() ? DataRowType.MANUAL.getCode() : DataRowType.AUTO.getCode());
 		}
-
+		// удаление данных
+		StringBuilder sql = new StringBuilder("DELETE FROM form_data_row");
+		sql.append(" WHERE form_data_id = :form_data_id AND temporary = :temporary");
+		if (temporary == DataRowType.SAVED) {
+			sql.append(" AND manual = :manual");
+		}
 		if (LOG.isTraceEnabled()) {
 			LOG.trace(params);
 			LOG.trace(sql.toString());
 		}
 		getNamedParameterJdbcTemplate().update(sql.toString().intern(), params);
+		// удаление спанов
+		StringBuilder sqlSpan = new StringBuilder("DELETE FROM form_data_row_span");
+		sqlSpan.append(" WHERE form_data_id = :form_data_id AND temporary = :temporary");
+		if (temporary == DataRowType.SAVED) {
+			sqlSpan.append(" AND manual = :manual");
+		}
+		if (LOG.isTraceEnabled()) {
+			LOG.trace(params);
+			LOG.trace(sqlSpan.toString());
+		}
+		getNamedParameterJdbcTemplate().update(sqlSpan.toString().intern(), params);
 	}
 
 	@Override
@@ -643,16 +869,16 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 	 *
 	 * @param formData экземпляр НФ для строк которых осуществляется сдвиг
 	 * @param range диапазон для указания с какого индекса и на сколько осуществляем сдвиг
-	 * @param dataRowType тип среза в котором осуществляется сдвиг строк
+	 * @param temporary тип среза в котором осуществляется сдвиг строк
 	 * @return количество смещенных строк
 	 */
-    private int shiftRows(FormData formData, DataRowRange range, DataRowType dataRowType) {
+    private int shiftRows(FormData formData, DataRowRange range, DataRowType temporary) {
 		StringBuilder sql = new StringBuilder("UPDATE form_data_row");
 		sql.append(" SET ord = ord + :shift WHERE form_data_id = :form_data_id AND temporary = :temporary AND manual = :manual AND ord >= :offset");
 
 		Map<String, Object> params = new HashMap<String, Object>();
 		params.put("form_data_id", formData.getId());
-		params.put("temporary", dataRowType.getCode());
+		params.put("temporary", temporary.getCode());
 		params.put("manual", formData.isManual() ? DataRowType.MANUAL.getCode() : DataRowType.AUTO.getCode());
 		params.put("offset", range.getOffset());
 		params.put("shift", range.getCount());
@@ -725,5 +951,119 @@ public class DataRowDaoImpl extends AbstractDao implements DataRowDao {
 		}
 		getNamedParameterJdbcTemplate().update(deleteSql.toString(), params);
 		getNamedParameterJdbcTemplate().update(insertSql.toString(), params);
+	}
+
+	/**
+	 * Запрос для получения информации об отрезанном пейджингом объединении ячеек по вертикали (ROW_SPAN)
+	 * Результат в виде List<row_id, x, y, colspan, rowspan, value, style>
+	 */
+	private static final String ROW_SPAN_QUERY =
+			" with t as ( " +
+			"	select fc.data_ord as x, span.ord as y, span.colspan, span.rowspan, ref.* " +
+			" 	from form_data fd " +
+			" 	join form_column fc on fc.form_template_id = fd.form_template_id " +
+			" 	join form_data_row data on data.form_data_id = fd.id " +
+			" 	join form_data_row_span span on span.form_data_id = data.form_data_id and span.temporary = data.temporary and " +
+			"   span.manual = data.manual and span.data_ord = fc.data_ord " +
+			" 	and data.ord between span.ord and span.ord + span.rowspan " +
+			" 	join form_data_row ref on ref.form_data_id = span.form_data_id and ref.temporary = span.temporary and " +
+			"   ref.manual = span.manual and span.ord = ref.ord " +
+			" 	where fd.id = :form_data_id and data.temporary = :temporary and data.manual = :manual and data.ord = :row_ord) " +
+		" select id row_id, x, y, colspan, rowspan, cell_value, cell_style from t " +
+		" unpivot include nulls ((value, style) for form_data_row_data_ord in " +
+			" ((C0, C0_STYLE) as 0, (C1, C1_STYLE) as 1, (C2, C2_STYLE) as 2, (C3, C3_STYLE) as 3, (C4, C4_STYLE) as 4, (C5, C5_STYLE) as 5, " +
+			" (C6, C6_STYLE) as 6, (C7, C7_STYLE) as 7, (C8, C8_STYLE) as 8, (C9, C9_STYLE) as 9, (C10, C10_STYLE) as 10, " +
+			" (C11, C11_STYLE) as 11, (C12, C12_STYLE) as 12, (C13, C13_STYLE) as 13, (C14, C14_STYLE) as 14, (C15, C15_STYLE) as 15, " +
+			" (C16, C16_STYLE) as 16, (C17, C17_STYLE) as 17, (C18, C18_STYLE) as 18, (C19, C19_STYLE) as 19, (C20, C20_STYLE) as 20, " +
+			" (C21, C21_STYLE) as 21, (C22, C22_STYLE) as 22, (C23, C23_STYLE) as 23, (C24, C24_STYLE) as 24, (C25, C25_STYLE) as 25, " +
+			" (C26, C26_STYLE) as 26, (C27, C27_STYLE) as 27, (C28, C28_STYLE) as 28, (C29, C29_STYLE) as 29, (C30, C30_STYLE) as 30, " +
+			" (C31, C31_STYLE) as 31, (C32, C32_STYLE) as 32, (C33, C33_STYLE) as 33, (C34, C34_STYLE) as 34, (C35, C35_STYLE) as 35, " +
+			" (C36, C36_STYLE) as 36, (C37, C37_STYLE) as 37, (C38, C38_STYLE) as 38, (C39, C39_STYLE) as 39, (C40, C40_STYLE) as 40, " +
+			" (C41, C41_STYLE) as 41, (C42, C42_STYLE) as 42, (C43, C43_STYLE) as 43, (C44, C44_STYLE) as 44, (C45, C45_STYLE) as 45, " +
+			" (C46, C46_STYLE) as 46, (C47, C47_STYLE) as 47, (C48, C48_STYLE) as 48, (C49, C49_STYLE) as 49, (C50, C50_STYLE) as 50, " +
+			" (C51, C51_STYLE) as 51, (C52, C52_STYLE) as 52, (C53, C53_STYLE) as 53, (C54, C54_STYLE) as 54, (C55, C55_STYLE) as 55, " +
+			" (C56, C56_STYLE) as 56, (C57, C57_STYLE) as 57, (C58, C58_STYLE) as 58, (C59, C59_STYLE) as 59, (C60, C60_STYLE) as 60, " +
+			" (C61, C61_STYLE) as 61, (C62, C62_STYLE) as 62, (C63, C63_STYLE) as 63, (C64, C64_STYLE) as 64, (C65, C65_STYLE) as 65, " +
+			" (C66, C66_STYLE) as 66, (C67, C67_STYLE) as 67, (C68, C68_STYLE) as 68, (C69, C69_STYLE) as 69, (C70, C70_STYLE) as 70, " +
+			" (C71, C71_STYLE) as 71, (C72, C72_STYLE) as 72, (C73, C73_STYLE) as 73, (C74, C74_STYLE) as 74, (C75, C75_STYLE) as 75, " +
+			" (C76, C76_STYLE) as 76, (C77, C77_STYLE) as 77, (C78, C78_STYLE) as 78, (C79, C79_STYLE) as 79, (C80, C80_STYLE) as 80, " +
+			" (C81, C81_STYLE) as 81, (C82, C82_STYLE) as 82, (C83, C83_STYLE) as 83, (C84, C84_STYLE) as 84, (C85, C85_STYLE) as 85, " +
+			" (C86, C86_STYLE) as 86, (C87, C87_STYLE) as 87, (C88, C88_STYLE) as 88, (C89, C89_STYLE) as 89, (C90, C90_STYLE) as 90, " +
+			" (C91, C91_STYLE) as 91, (C92, C92_STYLE) as 92, (C93, C93_STYLE) as 93, (C94, C94_STYLE) as 94, (C95, C95_STYLE) as 95, " +
+			" (C96, C96_STYLE) as 96, (C97, C97_STYLE) as 97, (C98, C98_STYLE) as 98, (C99, C99_STYLE) as 99 ))" +
+		" where x = form_data_row_data_ord ";
+	/**
+	 *
+	 */
+	private void updateFirstRow(final DataRowMapper dataRowMapper, DataRowType dataRowType, final DataRow<Cell> row) {
+		if (!isSupportOver()) { // отключаем метод для юнит-тестов
+			return;
+		}
+		if (!DataRowType.SAVED.equals(dataRowType) && !DataRowType.TEMP.equals(dataRowType)) {
+			throw new IllegalArgumentException("Argument ");
+		}
+		// выполняем запрос для поиска родителей
+		Map<String, Object> params = new HashMap<String, Object>();
+		params.put("form_data_id", dataRowMapper.getFormData().getId());
+		params.put("temporary", dataRowType.getCode());
+		params.put("manual", dataRowMapper.getFormData().isManual() ? DataRowType.MANUAL.getCode() : DataRowType.AUTO.getCode());
+		params.put("row_ord", row.getIndex());
+		getNamedParameterJdbcTemplate().query(ROW_SPAN_QUERY, params, new RowCallbackHandler() {
+			@Override
+			public void processRow(ResultSet rs) throws SQLException {
+				updateChildRow(dataRowMapper, rs, row);
+			}
+		});
+	}
+
+	/**
+	 * Обновляет дочерние ячейки значениями из родительских
+	 * @param dataRowMapper маппер значений из результата запроса
+	 * @param rs результат запроса родительских ячеек
+	 * @param childRow текущая строка (дочерняя)
+	 * @throws SQLException
+	 */
+	static void updateChildRow(DataRowMapper dataRowMapper, ResultSet rs, DataRow<Cell> childRow) throws SQLException {
+		final List<Column> columns = dataRowMapper.getFormData().getFormColumns();
+		int childRowOrd = childRow.getIndex();
+
+		int dataOrd = rs.getInt("x");
+		int parentRowOrd = rs.getInt("y");
+		Integer parentColSpan = rs.getInt("colspan");
+		Integer parentRowSpan = rs.getInt("rowspan");
+		String parentValue = rs.getString("cell_value");
+		String parentStyle = rs.getString("cell_style");
+
+		Column column = getColumnByDataOrd(columns, dataOrd);
+		Cell cell = childRow.getCell(column.getAlias());
+		// переносим из родительской ячейки стили и значения
+		if (parentColSpan != null) {
+			cell.setColSpan(parentColSpan);
+		}
+		if (parentRowSpan != null) {
+			cell.setRowSpan(parentRowSpan - childRowOrd + parentRowOrd);
+		}
+		cell.setStyle(FormStyle.valueOf(parentStyle));
+		cell.setValue(dataRowMapper.parseCellValue(column.getColumnType(), parentValue), childRowOrd);
+	}
+
+	/**
+	 * Поиск столбца по dataOrd
+	 * @param columns список граф НФ
+	 * @param dataOrd порядковый номер столбца в FORM_DATA_ROW
+	 * @return
+	 * @throws IllegalAccessException если указан неправильный порядко
+	 */
+	static Column getColumnByDataOrd(List<Column> columns, final int dataOrd) {
+		Column column = IterableUtils.find(columns, new Predicate<Column>() {
+			@Override
+			public boolean evaluate(Column column) {
+				return dataOrd == column.getDataOrder();
+			}
+		});
+		if (column == null) {
+			throw new IllegalArgumentException("Wrong value for \"dataOrd\" argument. " + dataOrd);
+		}
+		return column;
 	}
 }
